Adds auditlog capability and conform to changes in core
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>